tenzir/functional-test/data/reference/pipelines_local/test_Chart_Attributes/step_03.ref
error: could not parse `chart` operator
 --> <input>:1:24
  |
1 | from stdin read json | chart donut x=b
  |                        ^^^^^^^^^^^^^^^ 
  |
  = note: !! syntax_error: chart type `donut` requires field `value`